Move snackbar message to top of screen & stop annoying snackbar flicker on startup

--- a/zaup/public/css/site.css
+++ b/zaup/public/css/site.css
@@ -110,3 +110,7 @@ svg {
   width: 100px;
   margin-top: -14px;
 }
+
+.hide {
+  display: none;
+}
